welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:9: error: not found: value estSurOrange
		if (estSurOrange)
                    ^